[UPDATE] add about section, minor changes

--- a/assets/static/html/index.html
+++ b/assets/static/html/index.html
@@ -36,7 +36,8 @@
           <li class="brand"><a href="#">skyblog</a></li>
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Articles</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#">Others</a></li>
         </ul>
       </nav>
@@ -56,8 +57,8 @@
             <h3>Hello world</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              eiusmod tempor incididunt 你好啊 ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex eaer commodo consequat. Duis aute irure dolor
               in reprehenderit in voluptate velit esse cillum dolore eu fugiat
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
@@ -75,9 +76,9 @@
           <div class="card">
             <h3>Hello time</h3>
             <p class="preview">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              Lorem ipsum dolor sit amet, 你好啊 consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex eaer commodo consequat. Duis aute irure dolor
               in reprehenderit in voluptate velit esse cillum dolore eu fugiat
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
@@ -104,8 +105,8 @@
             <h3>Hello world</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              eiusmod tempor incididunt ut 你好啊 labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex eaer commodo consequat. Duis aute irure dolor
               in reprehenderit in voluptate velit esse cillum dolore eu fugiat
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
@@ -115,9 +116,9 @@
           <div class="card">
             <h3>Hello sky</h3>
             <p class="preview">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim venia
+              Lorem ipsum dolor 你好啊 sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim venia
             </p>
           </div>
           <div class="card">
@@ -129,9 +130,9 @@
           <div class="card">
             <h3>Hello time</h3>
             <p class="preview">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              Lorem ipsum dolor 你好啊 sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex eaer commodo consequat. Duis aute irure dolor
               in reprehenderit in voluptate velit esse cillum dolore eu fugiat
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
@@ -149,10 +150,55 @@
           </div>
         </div>
       </section>
+      <section id="about">
+        <div class="content-wrapper about">
+          <div class="card">
+            <h2>Hello, I'm Sky</h2>
+          </div>
+          <div class="card">
+            <h3>About me</h3>
+            <p class="preview">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+              officia deserunt mollit anim id est laborum
+            </p>
+          </div>
+          <div class="card">
+            <h3>About me</h3>
+            <p class="preview">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+              officia deserunt mollit anim id est laborum
+            </p>
+          </div>
+          <div class="card">
+            <h3>About me</h3>
+            <p class="preview">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+              officia deserunt mollit anim id est laborum
+            </p>
+          </div>
+          <div class="card">
+            <h3>About me</h3>
+            <p class="preview">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+              officia deserunt mollit anim id est laborum
+            </p>
+          </div>
+        </div>
+      </section>
     </section>
-    <a href="#" class="scroll-top">
+    <a href="#" class="scroll-top hidden" id="scroll-top">
       <i class="fas fa-chevron-up"></i>
     </a>
     <footer>&copy; Copyright 2021 by Skyline Liu.</footer>
+
+    <script src="../js/scroll_top.js"></script>
   </body>
 </html>
