[UPDATE] navbar's style

--- a/assets/static/html/index.html
+++ b/assets/static/html/index.html
@@ -33,12 +33,14 @@
       <nav>
         <ul>
           <!--add a feather icon here-->
-          <li class="brand"><a href="#">skyblog</a></li>
+          <li class="brand">
+            <a href="#"><i class="fas fa-feather"></i> skyblog</a>
+          </li>
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Articles</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#">Others</a></li>
+          <!-- <li><a href="#">Others</a></li> -->
         </ul>
       </nav>
     </header>
@@ -165,7 +167,7 @@
             </p>
           </div>
           <div class="card">
-            <h3>About me</h3>
+            <h3>Contact me</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incit esse cillum dolore eu fugiat nulla pariatur.
