--- a/assets/static/html/index.html
+++ b/assets/static/html/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>skyblog - Welcome</title>
 
     <link rel="stylesheet" href="../style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -22,22 +22,23 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@600&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/d03b276a94.js"
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
       crossorigin="anonymous"
-    ></script>
+    />
   </head>
 
   <body class="home">
     <header>
       <nav>
         <ul>
-          <!--add a feather icon here-->
           <li class="brand">
-            <a href="#"><i class="fas fa-feather"></i> skyblog</a>
+            <a href="./index.html"><i class="fas fa-feather"></i> skyblog</a>
           </li>
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Articles</a></li>
+          <li><a href="./articles.html">Articles</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#about">About</a></li>
           <!-- <li><a href="#">Others</a></li> -->
@@ -104,6 +105,9 @@
       <section>
         <div class="content-wrapper hot-post">
           <div class="card">
+            <h2>熱門文章</h2>
+          </div>
+          <div class="card">
             <h3>Hello world</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -122,12 +126,6 @@
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               Ut enim ad minim venia
             </p>
-          </div>
-          <div class="card">
-            <h2>熱門文章</h2>
-          </div>
-          <div class="card">
-            <h3>更多文章 <i class="fas fa-angle-double-right"></i></h3>
           </div>
           <div class="card">
             <h3>Hello time</h3>
@@ -149,6 +147,9 @@
               Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
               officia deserunt mollit anim id est laborum
             </p>
+          </div>
+          <div class="card">
+            <h3>更多文章 <i class="fas fa-angle-double-right"></i></h3>
           </div>
         </div>
       </section>
