[UPDATE] improving style for sidebar

--- a/assets/static/html/articles.html
+++ b/assets/static/html/articles.html
@@ -107,8 +107,31 @@
         <div class="name">天ほし</div>
         <nav>
           <ul>
-            <li>
-              <a href="#">Category <i class="fas fa-angle-down"></i></a>
+            <li class="collapsible-category" id="root-collapsible">
+              <a>Category <i class="fas fa-angle-down"></i></a>
+              <ul>
+                <li class="collapsible-category">
+                  <a>C++ <i class="fas fa-angle-down"></i></a>
+                  <ul>
+                    <li><a href="#">STL</a></li>
+                    <li><a href="#">boost</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Go</a></li>
+                <li class="collapsible-category">
+                  <a>Python <i class="fas fa-angle-down"></i></a>
+                  <ul>
+                    <li><a href="#">flask</a></li>
+                    <li class="collapsible-category">
+                      <a>async <i class="fas fa-angle-down"></i></a>
+                      <ul>
+                        <li><a href="#">asyncio</a></li>
+                        <li><a href="#">aiohttp</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
             </li>
             <li>
               <a href="#">Contact Me</a>
@@ -128,5 +151,6 @@
 
     <script src="../js/scroll_top.js"></script>
     <script src="../js/sidebar.js"></script>
+    <script src="../js/category.js"></script>
   </body>
 </html>
