[UPDATE] post page's layout & style

--- a/assets/static/html/index.html
+++ b/assets/static/html/index.html
@@ -39,7 +39,7 @@
           </li>
           <li class="active"><a href="#">Home</a></li>
           <li><a href="./articles.html">Articles</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="#about">About</a></li>
           <!-- <li><a href="#">Others</a></li> -->
         </ul>
