[UPDATE] homepage's card; chinese font

--- a/assets/static/html/index.html
+++ b/assets/static/html/index.html
@@ -56,7 +56,7 @@
           <div class="card">
             <h2>最新文章</h2>
           </div>
-          <div class="card">
+          <a href="#" class="card">
             <h3>Hello world</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -67,16 +67,16 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum
             </p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <h3>Hello sky</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim venia
             </p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <h3>Hello time</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, 你好啊 consectetur adipisicing elit,
@@ -87,8 +87,8 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum
             </p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <h3>Hello wow</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -96,10 +96,10 @@
               Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
               officia
             </p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="./articles.html" class="card">
             <h3>更多文章 <i class="fas fa-angle-double-right"></i></h3>
-          </div>
+          </a>
         </div>
       </section>
       <section>
@@ -107,7 +107,7 @@
           <div class="card">
             <h2>熱門文章</h2>
           </div>
-          <div class="card">
+          <a href="#" class="card">
             <h3>Hello world</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -118,16 +118,16 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum
             </p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <h3>Hello sky</h3>
             <p class="preview">
               Lorem ipsum dolor 你好啊 sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               Ut enim ad minim venia
             </p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <h3>Hello time</h3>
             <p class="preview">
               Lorem ipsum dolor 你好啊 sit amet, consectetur adipisicing elit,
@@ -138,8 +138,8 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum
             </p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="#" class="card">
             <h3>Hello wow</h3>
             <p class="preview">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -147,10 +147,10 @@
               Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
               officia deserunt mollit anim id est laborum
             </p>
-          </div>
-          <div class="card">
+          </a>
+          <a href="./articles.html" class="card">
             <h3>更多文章 <i class="fas fa-angle-double-right"></i></h3>
-          </div>
+          </a>
         </div>
       </section>
       <section id="about">
