--- a/assets/static/html/post.html
+++ b/assets/static/html/post.html
@@ -58,7 +58,7 @@
       <article>
         <div class="info">
           <i class="fas fa-seedling"></i>
-          <h1 class="title">Hello world</h1>
+          <h1 class="title">Hello world 你好</h1>
           <div class="meta-data">
             <span class="author"><i class="fas fa-feather-alt"></i> Sky</span>
             <time class="publish-date">
