[UPDATE] homepage's about section

--- a/assets/static/html/articles.html
+++ b/assets/static/html/articles.html
@@ -218,6 +218,9 @@
               </ul>
             </li>
             <li>
+              <a href="#">Archives</a>
+            </li>
+            <li>
               <a href="#">Contact Me</a>
             </li>
             <li>
