--- a/assets/static/html/index.html
+++ b/assets/static/html/index.html
@@ -158,41 +158,41 @@
           <div class="card">
             <h2>Hello, I'm Sky</h2>
           </div>
-          <div class="card">
+          <div class="card profile-card">
             <h3>About me</h3>
-            <p class="preview">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-              officia deserunt mollit anim id est laborum
-            </p>
+            <p class="preview">Some words about me.</p>
           </div>
-          <div class="card">
+          <div class="card contact-card">
             <h3>Contact me</h3>
             <p class="preview">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-              officia deserunt mollit anim id est laborum
+              <span>
+                <a href="mailto:25349023.qq@gmail.com">
+                  <i class="fas fa-paper-plane"></i> 25349023.qq@gmail.com
+                </a>
+              </span>
+              <span>
+                <a href="https://github.com/25349023/">
+                  <i class="fab fa-github-alt"></i> 25349023
+                </a>
+              </span>
             </p>
           </div>
-          <div class="card">
-            <h3>About me</h3>
+          <div class="card skill-card">
+            <h3>Skills</h3>
             <p class="preview">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-              officia deserunt mollit anim id est laborum
+              <span><span>Python</span></span>
+              <span><span>C</span></span>
+              <span><span>C++</span></span>
+              <span><span>C#</span></span>
+              <span><span>JavaScript</span></span>
+              <span><span>Lua</span></span>
+              <span><span>ML</span></span>
+              <span><span></span></span>
             </p>
           </div>
-          <div class="card">
-            <h3>About me</h3>
-            <p class="preview">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-              officia deserunt mollit anim id est laborum
-            </p>
+          <div class="card project-card">
+            <h3>Projects</h3>
+            <p class="preview">some projects here</p>
           </div>
         </div>
       </section>
