--- a/assets/static/html/post.html
+++ b/assets/static/html/post.html
@@ -535,6 +535,9 @@ end tell</code></pre>
               </ul>
             </li>
             <li>
+              <a href="#">Archives</a>
+            </li>
+            <li>
               <a href="#">Contact Me</a>
             </li>
             <li>
