--- a/assets/static/html/portfolio.html
+++ b/assets/static/html/portfolio.html
@@ -217,6 +217,9 @@
               </ul>
             </li>
             <li>
+              <a href="#">Archives</a>
+            </li>
+            <li>
               <a href="#">Contact Me</a>
             </li>
             <li>
