[UPDATE] modal image in postpage

--- a/assets/static/html/post.html
+++ b/assets/static/html/post.html
@@ -259,6 +259,9 @@
             Quote Level from the Text menu.
           </p>
           <hr />
+          <h3>Images</h3>
+          <img src="../images/peashooter.jpg" alt="image" />
+          <img src="../images/peashooter2.jpg" alt="image" />
           <h3>Lists</h3>
           <p>
             Markdown supports ordered (numbered) and unordered (bulleted) lists.
@@ -500,6 +503,11 @@ end tell</code></pre>
       </article>
     </main>
 
+    <figure class="modal hidden" id="modal">
+      <img src="../images/peashooter.jpg" alt="" />
+      <figcaption>Alt text</figcaption>
+    </figure>
+
     <div class="overlay hidden" id="overlay"></div>
     <aside class="hidden" id="sidebar">
       <div class="blur"></div>
@@ -560,6 +568,7 @@ end tell</code></pre>
     <script src="../js/category.js"></script>
     <script src="../js/line_numbers.js"></script>
     <script src="../js/toc.js"></script>
+    <script src="../js/modal.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
     <script>
       hljs.initHighlightingOnLoad();
