[UPDATE] rwd for sidebar and articles page

--- a/assets/static/html/index.html
+++ b/assets/static/html/index.html
@@ -47,7 +47,7 @@
     </header>
     <section class="banner">
       <div class="foreground">
-        <h1>Hello</h1>
+        <h1>Le Ciel</h1>
       </div>
     </section>
     <section class="content">
