[UPDATE] rwd for post page, sidebar

--- a/assets/static/html/post.html
+++ b/assets/static/html/post.html
@@ -45,10 +45,11 @@
           <li class="brand">
             <a href="./index.html"><i class="fas fa-feather"></i> skyblog</a>
           </li>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./articles.html">Articles</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="./index.html#about">About</a></li>
+          <li class="option"><a href="./index.html">Home</a></li>
+          <li class="option"><a href="./articles.html">Articles</a></li>
+          <li class="option"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="option"><a href="./index.html#about">About</a></li>
+          <li id="toggle-navbar"><i class="fas fa-th-large"></i></li>
         </ul>
       </nav>
     </header>
@@ -104,8 +105,7 @@
     <main>
       <article>
         <section class="info">
-          <i class="fas fa-seedling"></i>
-          <h1 class="title">Hello world 你好</h1>
+          <h1 class="title"><i class="fas fa-seedling"></i>Hello world 你好</h1>
           <div class="meta-data">
             <span class="author"><i class="fas fa-feather-alt"></i> Sky</span>
             <time class="publish-date">
@@ -566,6 +566,7 @@ end tell</code></pre>
     <script src="../js/scroll_top.js"></script>
     <script src="../js/sidebar.js"></script>
     <script src="../js/category.js"></script>
+    <script src="../js/navbar.js"></script>
     <script src="../js/line_numbers.js"></script>
     <script src="../js/toc.js"></script>
     <script src="../js/modal.js"></script>
