[MISC] adjust some styles

--- a/assets/static/html/portfolio.html
+++ b/assets/static/html/portfolio.html
@@ -37,10 +37,11 @@
           <li class="brand">
             <a href="./index.html"><i class="fas fa-feather"></i> skyblog</a>
           </li>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./articles.html">Articles</a></li>
-          <li class="active"><a href="#">Portfolio</a></li>
-          <li><a href="./index.html#about">About</a></li>
+          <li class="option"><a href="./index.html">Home</a></li>
+          <li class="option"><a href="./articles.html">Articles</a></li>
+          <li class="active option"><a href="#">Portfolio</a></li>
+          <li class="option"><a href="./index.html#about">About</a></li>
+          <li id="toggle-navbar"><i class="fas fa-th-large"></i></li>
         </ul>
       </nav>
     </header>
@@ -238,6 +239,6 @@
     <script src="../js/scroll_top.js"></script>
     <script src="../js/sidebar.js"></script>
     <script src="../js/category.js"></script>
-    <!-- <script src="../js/post_link.js"></script> -->
+    <script src="../js/navbar.js"></script>
   </body>
 </html>
