[MISC] fix typo

--- a/assets/static/html/portfolio.html
+++ b/assets/static/html/portfolio.html
@@ -47,7 +47,7 @@
       </nav>
     </header>
     <section class="banner">
-      <h1>Comming Soon</h1>
+      <h1>Coming Soon</h1>
     </section>
     <main>
       <div class="main-wrapper">
